--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,55 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    background-color: #222;
-    color: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	flex-direction: column;
+	background-color: #222;
+	color: #fff;
+}
+
+.btn1,
+.btn2 {
+    width: 100px;
+	margin: 0 20px;
+	padding: 10px 20px;
+	font-size: 28px;
+	background: none;
+	border: 1px solid #fff;
+	color: #fff;
+	cursor: pointer;
+    transition: color .5s;
+}
+
+.btn1:hover,
+.btn2:hover {
+	color: orange;
+}
+
+.color {
+	margin: 50px;
+	width: 200px;
+	height: 200px;
+	background-color: orange;
+	border: 1px solid #000;
+}
+
+.remove-color {
+	padding: 10px 20px;
+	font-size: 33px;
+	cursor: pointer;
+	background-color: orange;
+    border: none;
+    border-radius: 5px;
+    transition: background-color .5s;
+}
+
+.remove-color:hover {
+    background-color: rgb(255, 180, 40);
 }
