--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,7 @@ body {
 	height: 200px;
 	background-color: orange;
 	border: 1px solid #000;
+    transition: background-color 1s;
 }
 
 .remove-color {
