--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,7 @@ body {
 
 .btn1,
 .btn2 {
-    width: 100px;
+	width: 100px;
 	margin: 0 20px;
 	padding: 10px 20px;
 	font-size: 28px;
@@ -24,7 +24,7 @@ body {
 	border: 1px solid #fff;
 	color: #fff;
 	cursor: pointer;
-    transition: color .5s;
+	transition: color 0.5s;
 }
 
 .btn1:hover,
@@ -38,7 +38,7 @@ body {
 	height: 200px;
 	background-color: orange;
 	border: 1px solid #000;
-    transition: background-color 1s;
+	transition: background-color 1s;
 }
 
 .remove-color {
@@ -46,11 +46,11 @@ body {
 	font-size: 33px;
 	cursor: pointer;
 	background-color: orange;
-    border: none;
-    border-radius: 5px;
-    transition: background-color .5s;
+	border: none;
+	border-radius: 5px;
+	transition: background-color 0.5s;
 }
 
 .remove-color:hover {
-    background-color: rgb(255, 180, 40);
+	background-color: rgb(255, 180, 40);
 }
